# digitaltwins-api

./: .dockerignore  .env.template  .env_template  .gitignore  .readthedocs.yaml  Dockerfile  README.md  configs.ini.template  configs.template.ini  configs_template.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  requirements_pyenv.txt  setup.py
app/: main.py
app/routers/: __init__.py  (+7 more)
digitaltwins/: __init__.py
dtp/: __init__.py
examples/: config.ini  delete_dataset.py  download_dataset.py  export_metadata.py  gen3_export.py  gen3_query.py  generate_derived_dataset.py  generate_primary_dataset.py  generate_primary_dataset_template.py  query.py  query_metadata.py  query_postgres.py  query_seek.py  run_workflow.py  upload_assay.py  upload_dataset.py
tests/: test_assay_api.py  test_delete_dataset_api.py  test_minio.py  test_upload_assay_api.py  test_upload_assay_db.py  test_upload_dataset.py  test_upload_dataset_api.py  test_workflow_run.py
tutorials/: tutorial_1_getting_started.ipynb  tutorial_1_getting_started.md  tutorial_2_create_datasets_and_description.ipynb  tutorial_2_create_datasets_and_its metadata.ipynb  tutorial_2_exploring_and_downloading_platform_datasets.ipynb  tutorial_2_finding_and_downloading_platform_datasets.ipynb  tutorial_3_loading_and_exploring_sds_datasets.ipynb  tutorial_3_submit_datasets.ipynb  tutorial_3_upload_datasets.ipynb  tutorial_4_creating_sds_datasets.ipynb  tutorial_4_delete_datasets.ipynb  tutorial_4_update_existing_datasets.ipynb  tutorial_5_query_existing_datasets.ipynb  (+5 more)
(+192 files in other folders)
